# docrouter

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  agent.md  analysis_module.py  config.yml  config_loader.py  data_processing_common.py  docker-compose.yml  docrouter.py  env.example  error_handling.py  file_utils.py  image_data_processing.py  llm_client.py  main.py  openrouter_client.py  output_filter.py  package.json  pyproject.toml  requirements.txt  text_data_processing.py  tsconfig.json  vite.config.ts
prompts/: notes_prompt.txt  routing_prompt.txt
src/: config.py  config_loader.py  docrouter.py  error_handler.py  error_handling.py  extractor.py  file_sorter.py  file_utils.py  generate_metadata.py  llm_client.py  logger.py  logging_config.py  metadata_generation.py  metadata_schema.py  models.py  ocr_pipeline.py  path_builder.py  prompt_templates.py  saver.py  scanner.py
tests/: conftest.py  test_chat_truncation.py  test_config.py  test_config_env_priority.py  test_config_ignore_unknown.py  test_config_loader.py  test_db_reopen.py  test_directory_processor_async.py  test_directory_processor_recursive.py  test_docrouter_recursive.py  test_embeddings.py  test_error_handler.py  test_error_handling.py  test_error_handling_backend.py  test_extractor.py  test_file_sorter.py  test_file_sorter_missing_dirs.py  test_file_sorter_pending.py  test_file_utils.py  test_files_scan_cache.py  test_finalize_file.py  test_folder_tree.py  test_folder_tree_route.py  test_folders_js.py  test_full_text_search.py  test_image_ocr.py  test_logger.py  (+25 more)
(+55 files in other folders)
