[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "docrouter"
version = "0.1.0"
description = "DocRouter — локальный веб‑сервис для сортировки документов"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn",
    "httpx",
    "pydantic",
    "pillow",
    "pytesseract",
    "numpy",
    "opencv-python",
    "python-docx",
    "pymupdf",
    "openpyxl",
    "xlrd",
    "python-multipart",
    "unidecode",
    "python-magic",
]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = [
    "logging_config",
    "config",
    "error_handling",
    "file_sorter",
    "metadata_generation",
    "models",
    "ocr_pipeline",
    "prompt_templates",
]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
